src/snapshots/libflatterer__tests__basic_list.json-arrow_new_table-tables.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,table_title"
- "main,main"
- "rating,rating"
- "moo_names,moo_names"

