src/snapshots/libflatterer__tests__basic_with_multiple.json-data_package.json.snap
---
source: src/lib.rs
assertion_line: 1892
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: _link
          type: text
          count: 2
        - name: _link_main
          type: text
          count: 2
        - name: id
          type: number
          count: 2
        - name: rating_code
          type: text
          count: 2
        - name: rating_name
          type: text
          count: 2
      primaryKey: _link
    path: csv/games.csv
  - profile: tabular-data-resource
    name: games_platforms
    schema:
      fields:
        - name: _link
          type: text
          count: 3
        - name: _link_games
          type: text
          count: 3
        - name: _link_main
          type: text
          count: 3
        - name: name
          type: text
          count: 3
      primaryKey: _link
    path: csv/games_platforms.csv
  - profile: tabular-data-resource
    name: moreGames
    schema:
      fields:
        - name: _link
          type: text
          count: 2
        - name: _link_main
          type: text
          count: 2
        - name: id
          type: number
          count: 2
        - name: rating_code
          type: text
          count: 2
        - name: rating_name
          type: text
          count: 2
      primaryKey: _link
    path: csv/moreGames.csv
  - profile: tabular-data-resource
    name: moreGames_platforms
    schema:
      fields:
        - name: _link
          type: text
          count: 3
        - name: _link_moreGames
          type: text
          count: 3
        - name: _link_main
          type: text
          count: 3
        - name: name
          type: text
          count: 3
      primaryKey: _link
    path: csv/moreGames_platforms.csv
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: date
          type: date
          count: 1
      primaryKey: _link
    path: csv/main.csv

