src/snapshots/libflatterer__tests__basic_with_multiple.json-datapackage.json.snap
---
source: src/lib.rs
expression: "&value"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    flatterer_name: games
    title: games
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 2
          stats:
            min_len: 9
            max_len: 9
            min_str: 0.games.0
            max_str: 0.games.1
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - 0.games.0
                - 1
              - - 0.games.1
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: id
          title: id
          type: number
          format: number
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: "2"
            max_str: "2"
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "2"
                - 1
            sum: 3
            mean: 1.5
            variance: 0.25
            stddev: 0.5
            min_number: 1
            max_number: 2
            median: 1.5
            lower_quartile: 1
            upper_quartile: 2
            deciles: 0
            centiles: 0
        - name: rating_code
          title: rating_code
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: E
            max_str: E
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - E
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: rating_name
          title: rating_name
          type: string
          format: string
          count: 2
          stats:
            min_len: 8
            max_len: 8
            min_str: Everyone
            max_str: Everyone
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - Everyone
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/games.csv
  - profile: tabular-data-resource
    name: games_platforms
    flatterer_name: games_platforms
    title: games_platforms
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 3
          stats:
            min_len: 21
            max_len: 21
            min_str: 0.games.0.platforms.0
            max_str: 0.games.1.platforms.1
            count: 3
            empty_count: 0
            exact_unique: 3
            estimate_unique: ~
            top_20:
              - - 0.games.0.platforms.0
                - 1
              - - 0.games.1.platforms.0
                - 1
              - - 0.games.1.platforms.1
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_games
          title: _link_games
          type: string
          format: string
          count: 3
          stats:
            min_len: 9
            max_len: 9
            min_str: 0.games.0
            max_str: 0.games.1
            count: 3
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - 0.games.1
                - 2
              - - 0.games.0
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 3
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 3
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 3
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: name
          title: name
          type: string
          format: string
          count: 3
          stats:
            min_len: 2
            max_len: 11
            min_str: PC
            max_str: Xbox
            count: 3
            empty_count: 0
            exact_unique: 3
            estimate_unique: ~
            top_20:
              - - PC
                - 1
              - - Playstation
                - 1
              - - Xbox
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_games
          reference:
            resource: games
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/games_platforms.csv
  - profile: tabular-data-resource
    name: moregames
    flatterer_name: moreGames
    title: moreGames
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 2
          stats:
            min_len: 13
            max_len: 13
            min_str: 0.moreGames.0
            max_str: 0.moreGames.1
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - 0.moreGames.0
                - 1
              - - 0.moreGames.1
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: id
          title: id
          type: number
          format: number
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: "2"
            max_str: "2"
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "2"
                - 1
            sum: 3
            mean: 1.5
            variance: 0.25
            stddev: 0.5
            min_number: 1
            max_number: 2
            median: 1.5
            lower_quartile: 1
            upper_quartile: 2
            deciles: 0
            centiles: 0
        - name: rating_code
          title: rating_code
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: E
            max_str: E
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - E
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: rating_name
          title: rating_name
          type: string
          format: string
          count: 2
          stats:
            min_len: 8
            max_len: 8
            min_str: Everyone
            max_str: Everyone
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - Everyone
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/moreGames.csv
  - profile: tabular-data-resource
    name: moregames_platforms
    flatterer_name: moreGames_platforms
    title: moreGames_platforms
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 3
          stats:
            min_len: 25
            max_len: 25
            min_str: 0.moreGames.0.platforms.0
            max_str: 0.moreGames.1.platforms.1
            count: 3
            empty_count: 0
            exact_unique: 3
            estimate_unique: ~
            top_20:
              - - 0.moreGames.0.platforms.0
                - 1
              - - 0.moreGames.1.platforms.0
                - 1
              - - 0.moreGames.1.platforms.1
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_moreGames
          title: _link_moreGames
          type: string
          format: string
          count: 3
          stats:
            min_len: 13
            max_len: 13
            min_str: 0.moreGames.0
            max_str: 0.moreGames.1
            count: 3
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - 0.moreGames.1
                - 2
              - - 0.moreGames.0
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: _link_main
          title: _link_main
          type: string
          format: string
          count: 3
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 3
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 3
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: name
          title: name
          type: string
          format: string
          count: 3
          stats:
            min_len: 2
            max_len: 11
            min_str: PC
            max_str: Xbox
            count: 3
            empty_count: 0
            exact_unique: 3
            estimate_unique: ~
            top_20:
              - - PC
                - 1
              - - Playstation
                - 1
              - - Xbox
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
      foreignKeys:
        - fields: _link_moreGames
          reference:
            resource: moreGames
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/moreGames_platforms.csv
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 1
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "0"
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - "0"
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: date
          title: date
          type: date
          format: "%Y-%m-%d"
          count: 1
          stats:
            min_len: 10
            max_len: 10
            min_str: 2001-01-01
            max_str: 2001-01-01
            count: 1
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - 2001-01-01
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
    path: csv/main.csv

