src/snapshots/libflatterer__tests__basic_with_multiple.json-tables.csv.snap
---
source: src/lib.rs
assertion_line: 1898
expression: output

---
- "table_name,table_title"
- "games,games"
- "games_platforms,games_platforms"
- "moreGames,moreGames"
- "moreGames_platforms,moreGames_platforms"
- "main,main"

