src/snapshots/libflatterer__tests__check_nesting-2.snap
---
source: src/lib.rs
expression: "&flat_files.table_metadata"

---
main:
  field_type:
    - text
    - text
    - text
    - date
    - text
  fields:
    - a
    - c
    - d_da
    - d_db
    - _link
  field_counts:
    - 1
    - 1
    - 1
    - 1
    - 1
  rows: 1
  ignore: false
  ignore_fields:
    - false
    - false
    - false
    - false
    - false
  order: []
  field_titles:
    - a
    - c
    - d_da
    - d_db
    - _link
  table_name_with_separator: ""
  output_path: "[path]"
  field_titles_lc: []
e:
  field_type:
    - number
    - text
    - text
    - text
  fields:
    - ea
    - eb
    - _link
    - _link_main
  field_counts:
    - 2
    - 2
    - 2
    - 2
  rows: 2
  ignore: false
  ignore_fields:
    - false
    - false
    - false
    - false
  order: []
  field_titles:
    - ea
    - eb
    - _link
    - _link_main
  table_name_with_separator: e_
  output_path: "[path]"
  field_titles_lc: []

